--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "ant-design-vue": "^1.2.4",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.6",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vuefire": "^2.2.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
